# WDCPP-ALL-IN-ONE

./: CMakeLists.txt  LICENSE  README.md  grpc_gen.sh  main.ipynb
MainAPI/: APIServer.cpp  config.cfg  main.cpp
MainAPI/include/: APIServer.h
ServiceRegistry/: ServiceInfo.grpc.pb.cc  ServiceInfo.pb.cc  ServiceRegistry.cpp  config.cfg  main.cpp
ServiceRegistry/include/: ServiceInfo.grpc.pb.h  ServiceInfo.pb.h  ServiceRegistry.h
proto/: ServiceInfo.proto
utilities/: Config.cpp  a.out  config.cfg  test.cpp
utilities/include/: Config.h  utilities.h
